Closed Bug 230244 Opened 22 years ago Closed 22 years ago

mozilla\xpinstall\src\nsInstall.cpp(2386) : warning C4930: 'nsString usr(void)': prototyped function not called (was a variable definition intended?)

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

Microsoft (R) 32-bit C/C++ Optimizing Compiler Version 13.00.9466 for 80x86 Copyright (C) Microsoft Corporation 1984-2001. All rights reserved. r:/mozilla\xpinstall\src\nsInstall.cpp(2386) : warning C4930: 'nsString usr(void)': prototyped function not called (wasa variable definition intended?)
Attachment #138505 - Flags: superreview?(tor)
Attachment #138505 - Flags: review?(bsmedberg)
Comment on attachment 138505 [details] [diff] [review] Remove unused faulty variable and optimize stuff wow
Attachment #138505 - Flags: review?(bsmedberg) → review+
Attachment #138505 - Flags: superreview?(tor) → superreview+
mozilla/xpinstall/src/nsInstall.cpp 1.218
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: