Bug 230244 mozilla\xpinstall\src\nsInstall.cpp(2386) : warning C4930: 'nsString usr(void)': prototyped function not called (was a variable definition intended?) r=bsmedberg sr=tor